--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="stars"></div>
 
     <div class="caption">
-      <h1>Eres mi flor amarilla en este universo infinito</h1>
-      <p> Te regalo estás Flores amarillas virtuales solo para ti </p>
+      <h1>Ivana eres mi flor amarilla en este universo infinito</h1>
+      <p> Te regalo estás Flores amarillas virtuales solo para ti, no es mucho pero espero guste Uwu, Feiz 21 de Septiembre 🌼 </p>
     </div>
 
     <div class="controls">
