--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
     <div class="caption">
       <h1>Ivana eres mi flor amarilla en este universo infinito</h1>
-      <p> Te regalo estás Flores amarillas virtuales solo para ti, no es mucho pero espero guste Uwu <br> 🌼 Feiz 21 de Septiembre 🌼 </p>
+      <p> Te regalo estás Flores amarillas virtuales solo para ti, no es mucho pero espero guste Uwu</p> <br> <br>
+        <h1> 🌼 Feiz 21 de Septiembre 🌼 </h1>
     </div>
 
     <div class="controls">
