--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
     // accessibility: pause when page not visible
     document.addEventListener('visibilitychange', ()=>{ running = !document.hidden; document.getElementById('toggle').textContent = running ? 'Pausar' : 'Reanudar'; if(running) last = performance.now(); });
   </script>
-  <audio id="bg-music" src="" autoplay loop></audio>
+  <audio id="bg-music" src="wwd.mp3juice.blog - Bad Bunny - Moscow Mule (Video Oficial) Un Verano Sin Ti (320 KBps).mp3" autoplay loop></audio>
 <script>
   const music = document.getElementById('bg-music');
   document.body.addEventListener('click', () => {
