--- a/index.html
+++ b/index.html
@@ -245,32 +245,40 @@
     // accessibility: pause when page not visible
     document.addEventListener('visibilitychange', ()=>{ running = !document.hidden; document.getElementById('toggle').textContent = running ? 'Pausar' : 'Reanudar'; if(running) last = performance.now(); });
   </script>
-  <audio id="player" autoplay></audio>
+<audio id="player" autoplay></audio>
 
 <script>
-  const tracks = ["Flores.mp3", "wwd.mp3juice.blog - Bad Bunny - Moscow Mule (Video Oficial) Un Verano Sin Ti (320 KBps).mp3"]; // lista de canciones
+  // lista de canciones
+  const tracks = [
+    "Flores.mp3", 
+    "Moscow.mp3" // renombra tu segundo archivo así antes de subirlo
+  ];
+
   let current = 0;
   const player = document.getElementById("player");
 
-  // arrancar primera
+  // arranca la primera
   player.src = tracks[current];
   player.play();
 
-  // cuando termina una, pasa a la siguiente
+  // cuando termine, pasa a la siguiente o vuelve a empezar
   player.addEventListener("ended", () => {
     current++;
     if (current < tracks.length) {
       player.src = tracks[current];
       player.play();
     } else {
-      // vuelve a empezar desde la primera (loop infinito)
       current = 0;
       player.src = tracks[current];
       player.play();
     }
   });
+
+  // Fix para móviles que bloquean autoplay
+  document.body.addEventListener("click", () => {
+    player.play();
+  }, { once: true });
 </script>
-  
-  
+
 </body>
 </html>
