Definitivamente el último

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
   // lista de canciones
   const tracks = [
     "Flores.mp3", 
-    "Moscow.mp3" // renombra tu segundo archivo así antes de subirlo
+    "wwd.mp3juice.blog - Bad Bunny - Moscow Mule (Video Oficial) Un Verano Sin Ti (320 KBps).mp3" // renombra tu segundo archivo así antes de subirlo
   ];
 
   let current = 0;
